--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/parcel-bundler": "^1.12.1",
     "@types/react": "^16.9.3",
     "@types/reactstrap": "^8.0.4",
