--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,28 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/dist/app.js"
-        }
+            "name": "Launch via NPM",
+            "runtimeExecutable": "npm",
+            "runtimeArgs": [
+                "run",
+                "start"
+            ],
+            "port": 5858,
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}/dist/web",
+            "breakOnLoad": true,
+            "sourceMapPathOverrides": {
+              "../*": "${webRoot}/*"
+            }
+          }
+       
     ]
 }
