--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "A web client for the nodejs-poolcontroller app v6.0 and higher",
   "main": "/dist/index.html",
   "scripts": {
-    "dev": "parcel serve ./web/dashboard/index.html",
-    "build": "parcel build ./web/dashboard/index.html"
+    "start": "./node_modules/.bin/tsc-watch --onSuccess \"node ./dist/server.js\"",
+    "dev-parcel": "parcel serve ./web/dashboard/index.html",
+    "build-parcel": "parcel build ./web/dashboard/index.html"
   },
   "author": "Russell Goldin",
   "license": "AGPL-3.0",
   "dependencies": {
     "express": "^4.17.1",
     "multicast-dns": "^7.2.0",
+    "node-ssdp": "^4.0.0",
     "parcel-bundler": "^1.12.3",
     "react": "^16.9.0",
     "react-data-grid": "^6.1.0",
@@ -21,7 +23,8 @@
     "react-timekeeper": "^2.0.3",
     "reactstrap": "^8.0.1",
     "socket.io": "^2.3.0",
-    "socketio-wildcard": "^2.0.0"
+    "socketio-wildcard": "^2.0.0",
+    "tsc-watch": "^4.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
