--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,11 @@
         "allowJs": false,
         "allowSyntheticDefaultImports": false,
         "esModuleInterop": true,
-        "jsx": "react"
+        "jsx": "react",
+        "watch": true
     },
     "include": [
-        "web/**/*", "src"
+        "src"
     ],
     "exclude":[
         "node_modules"
