--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "author": "Russell Goldin",
   "license": "AGPL-3.0",
+  "browserslist": [
+    "last 2 Chrome versions"
+    ],
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "multicast-dns": "^7.2.0",
     "node-ssdp": "^4.0.0",
@@ -27,11 +31,16 @@
     "tsc-watch": "^4.1.0"
   },
   "devDependencies": {
+    "@attently/riek": "^2.0.1",
     "@types/express": "^4.17.2",
     "@types/parcel-bundler": "^1.12.1",
     "@types/react": "^16.9.3",
     "@types/reactstrap": "^8.0.4",
     "@types/socket.io": "^2.1.3",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "react-router-dom": "^5.1.2",
     "typescript": "^3.6.3"
   }
