--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "allowSyntheticDefaultImports": false,
         "esModuleInterop": true,
         "jsx": "react",
-        "watch": true
+        // "watch": false
     },
     "include": [
         "src"
