--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "discovery": {
-    "poolControllerURL": "http://10.0.0.44:4200"
+    "poolControllerURL": "http:/localhost:4200/"
   },
   "web": {
     "port": 8080
