--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A web client for the nodejs-poolcontroller app v6.0 and higher",
   "main": "/dist/index.html",
   "scripts": {
-    "start": "rm -rf dist && ./node_modules/.bin/tsc-watch --onSuccess \"node ./dist/Server.js\"",
+    "start": "./node_modules/.bin/tsc-watch --onSuccess \"node ./dist/Server.js\"",
     "dev-parcel": "parcel serve ./web/dashboard/index.html",
-    "build-parcel": "parcel build ./web/dashboard/index.html"
+    "build-parcel": "parcel build ./web/dashboard/index.html",
+    "debug:server": "./node_modules/.bin/tsc-watch --onSuccess \"node --inspect ./dist/Server.js\""
   },
   "author": "Russell Goldin",
   "license": "AGPL-3.0",
