refactor and intellibrite

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,25 +10,17 @@
             "name": "Launch via NPM",
             "runtimeExecutable": "npm",
             "runtimeArgs": [
-                "run",
-                "start"
+                "run-script",
+                "debug:server"
             ],
-            "port": 5858,
+            "port": 9229,
             "skipFiles": [
                 "<node_internals>/**"
-            ]
-        },
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}/dist/web",
-            "breakOnLoad": true,
-            "sourceMapPathOverrides": {
-              "../*": "${webRoot}/*"
-            }
-          }
+            ],
+            "timeout": 40000,
+            "cwd": "${workspaceFolder}"
+        }
+       
        
     ]
 }
