--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "last 2 Chrome versions"
   ],
   "dependencies": {
+    "@types/socket.io-client": "^1.4.33",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "multicast-dns": "^7.2.0",
