--- a/package.json
+++ b/package.json
@@ -20,38 +20,40 @@
     "last 2 Chrome versions"
   ],
   "dependencies": {
-    "@types/socket.io-client": "^1.4.33",
     "axios": "^0.19.2",
     "express": "^4.17.1",
-    "multicast-dns": "^7.2.0",
+    "multicast-dns": "^7.2.2",
     "node-ssdp": "^4.0.0",
-    "parcel-bundler": "^1.12.3",
-    "react": "^16.9.0",
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.13.1",
     "react-data-grid": "^6.1.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.13.1",
     "react-infinite-calendar": "^2.3.1",
     "react-rangeslider": "^2.2.0",
-    "react-timekeeper": "^2.0.3",
-    "reactstrap": "^8.0.1",
+    "react-timekeeper": "^2.1.1",
+    "reactstrap": "^8.4.1",
     "rimraf": "^3.0.2",
     "socket.io": "^2.3.0",
     "socketio-wildcard": "^2.0.0",
-    "tsc-watch": "^4.1.0"
+    "tsc-watch": "^4.2.8"
   },
   "devDependencies": {
     "@attently/riek": "^2.0.1",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@types/express": "^4.17.2",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.6",
     "@types/parcel-bundler": "^1.12.1",
-    "@types/react": "^16.9.3",
-    "@types/reactstrap": "^8.0.4",
-    "@types/socket.io": "^2.1.3",
-    "@typescript-eslint/parser": "^2.25.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "react-router-dom": "^5.1.2",
-    "typescript": "^3.6.3"
+    "@types/react": "^16.9.35",
+    "@types/reactstrap": "^8.4.2",
+    "@types/socket.io": "^2.1.8",
+    "@types/socket.io-client": "^1.4.33",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "react-router-dom": "^5.2.0",
+    "typescript": "^3.9.3",
+    "@types/express-serve-static-core": "^4.17.0"
   }
 }
