--- a/config.json
+++ b/config.json
@@ -2,11 +2,11 @@
   "discovery": {
     "override": {
       "protocol": "http",
-      "host": "poolcontroller.local",
+      "host": "localhost",
       "port": 4200
     },
     "useSSDP": false,
-    "poolURL": "http://poolcontroller.local:4200"
+    "poolURL": "http://localhost:4200"
   },
   "web": {
     "port": 8080
