refactor bodies and fix for #9

--- a/config.json
+++ b/config.json
@@ -13,7 +13,8 @@
   },
   "options": {
     "hidePanels": [
-      "Replay"
+      "Replay",
+      "Socket Tester"
     ],
     "debug": false
   }
