--- a/package.json
+++ b/package.json
@@ -33,31 +33,31 @@
     "react-rangeslider": "^2.2.0",
     "react-switch": "^5.0.1",
     "react-timekeeper": "^2.1.1",
-    "reactstrap": "^8.4.1",
+    "reactstrap": "^8.5.1",
     "rimraf": "^3.0.2",
     "socket.io": "^2.3.0",
     "socketio-wildcard": "^2.0.0",
-    "tsc-watch": "^4.2.8",
+    "tsc-watch": "^4.2.9",
     "update": "^0.7.4",
     "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@attently/riek": "^2.0.1",
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
-    "@types/express": "^4.17.6",
-    "@types/node": "^14.0.6",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@types/express": "^4.17.7",
+    "@types/express-serve-static-core": "^4.17.8",
+    "@types/node": "^14.0.22",
     "@types/parcel-bundler": "^1.12.1",
-    "@types/react": "^16.9.35",
-    "@types/reactstrap": "^8.4.2",
+    "@types/react": "^16.9.42",
+    "@types/reactstrap": "^8.5.0",
     "@types/socket.io": "^2.1.8",
     "@types/socket.io-client": "^1.4.33",
-    "@typescript-eslint/parser": "^3.0.2",
-    "eslint": "^7.1.0",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.6",
     "react-router-dom": "^5.2.0",
-    "typescript": "^3.9.3",
-    "@types/express-serve-static-core": "^4.17.0"
+    "typescript": "^3.9.6"
   }
 }
