--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "last 2 Chrome versions"
   ],
   "dependencies": {
+    "@types/react-data-grid": "^4.0.5",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "multicast-dns": "^7.2.2",
@@ -43,21 +44,21 @@
   },
   "devDependencies": {
     "@attently/riek": "^2.0.1",
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@types/express": "^4.17.7",
-    "@types/express-serve-static-core": "^4.17.8",
-    "@types/node": "^14.0.22",
+    "@types/express-serve-static-core": "^4.17.9",
+    "@types/node": "^14.0.24",
     "@types/parcel-bundler": "^1.12.1",
-    "@types/react": "^16.9.42",
+    "@types/react": "^16.9.43",
     "@types/reactstrap": "^8.5.0",
-    "@types/socket.io": "^2.1.8",
+    "@types/socket.io": "^2.1.10",
     "@types/socket.io-client": "^1.4.33",
-    "@typescript-eslint/parser": "^3.6.0",
-    "eslint": "^7.4.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "react-router-dom": "^5.2.0",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   }
 }
