--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,19 @@
             "type": "shell",
             "command": "/Applications/Chromium.app/Contents/MacOS/Chromium --remote-debugging-port=9222",
             "problemMatcher": []
+        },
+        {
+            "label": "npm: watch",
+            "type": "npm",
+            "script": "watch",
+            "problemMatcher": [
+                "$tsc-watch"
+            ],
+            "presentation": {
+                "reveal": "silent"
+            },
+            "group": "build",
+            "isBackground": true
         }
     ]
 }
