--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
-       // "paths": { "*": [ "@types/*" ] },
         "target":"es6",
         "module":"commonjs",
         "noImplicitAny": false,
@@ -13,8 +12,7 @@
         "allowJs": false,
         "allowSyntheticDefaultImports": false,
         "esModuleInterop": true,
-        "jsx": "react",
-        // "watch": false
+        "jsx": "react"
     },
     "include": [
         "src"
