--- a/config.json
+++ b/config.json
@@ -13,9 +13,32 @@
   },
   "options": {
     "hidePanels": [
+      "Virtual Circuits",
+      "Circuit Groups",
+      "Lights",
+      "Features",
+      "Circuits",
+      "Pumps"
     ],
     "debug": false
   },
   "chemController": {
+    "144": {
+      "alarms": {
+        "flow": {
+          "val": 1,
+          "name": "noflow",
+          "desc": "No Flow",
+          "dismissed": true
+        },
+        "pHTank": {
+          "val": 32,
+          "name": "phtankempty",
+          "desc": "pH Tank Empty",
+          "dismissed": true
+        }
+      },
+      "warnings": {}
+    }
   }
 }
